@@ -1660,41 +1660,43 @@ static void setup_relay_server(struct relay_server *rs, ioa_engine_handle e, int
 	bufferevent_enable(rs->auth_in_buf, EV_READ);
 
 	init_turn_server(&(rs->server),
-			 rs->id, turn_params.verbose,
-			 rs->ioa_eng, turn_params.ct, 0,
-			 turn_params.fingerprint, DONT_FRAGMENT_SUPPORTED,
-			 start_user_check,
-			 check_new_allocation_quota,
-			 release_allocation_quota,
-			 turn_params.external_ip,
-			 &turn_params.check_origin,
-			 &turn_params.no_tcp_relay,
-			 &turn_params.no_udp_relay,
-			 &turn_params.stale_nonce,
-			 &turn_params.max_allocate_lifetime,
-			 &turn_params.channel_lifetime,
-			 &turn_params.permission_lifetime,
-			 &turn_params.stun_only,
-			 &turn_params.no_stun,
-			 &turn_params.no_software_attribute,
-			 &turn_params.web_admin_listen_on_workers,
-			 &turn_params.alternate_servers_list,
-			 &turn_params.tls_alternate_servers_list,
-			 &turn_params.aux_servers_list,
-			 turn_params.udp_self_balance,
-			 &turn_params.no_multicast_peers, &turn_params.allow_loopback_peers,
-			 &turn_params.ip_whitelist, &turn_params.ip_blacklist,
-			 send_socket_to_relay,
-			 &turn_params.secure_stun, &turn_params.mobility,
-			 turn_params.server_relay,
-			 send_turn_session_info,
-			 send_https_socket,
-			 allocate_bps,
-			 turn_params.oauth,
-			 turn_params.oauth_server_name,
-			 turn_params.acme_redirect,
-			 turn_params.allocation_default_address_family,
-			 &turn_params.log_binding);
+		rs->id, turn_params.verbose,
+		rs->ioa_eng, turn_params.ct, 0,
+		turn_params.fingerprint, DONT_FRAGMENT_SUPPORTED,
+		start_user_check,
+		check_new_allocation_quota,
+		release_allocation_quota,
+		turn_params.external_ip,
+		&turn_params.check_origin,
+		&turn_params.no_tcp_relay,
+		&turn_params.no_udp_relay,
+		&turn_params.stale_nonce,
+		&turn_params.max_allocate_lifetime,
+		&turn_params.channel_lifetime,
+		&turn_params.permission_lifetime,
+		&turn_params.stun_only,
+		&turn_params.no_stun,
+		&turn_params.no_software_attribute,
+		&turn_params.web_admin_listen_on_workers,
+		&turn_params.alternate_servers_list,
+		&turn_params.tls_alternate_servers_list,
+		&turn_params.aux_servers_list,
+		turn_params.udp_self_balance,
+		&turn_params.no_multicast_peers, &turn_params.allow_loopback_peers,
+		&turn_params.ip_whitelist, &turn_params.ip_blacklist,
+		send_socket_to_relay,
+		&turn_params.secure_stun, &turn_params.mobility,
+		turn_params.server_relay,
+		send_turn_session_info,
+		send_https_socket,
+		allocate_bps,
+		turn_params.oauth,
+		turn_params.oauth_server_name,
+		turn_params.acme_redirect,
+		turn_params.allocation_default_address_family,
+		&turn_params.log_binding,
+		&turn_params.no_stun_backward_compatibility
+		);
 	
 	if(to_set_rfc5780) {
 		set_rfc5780(&(rs->server), get_alt_addr, send_message_from_listener_to_client);
