@@ -2867,7 +2867,7 @@ static int handle_turn_binding(turn_turnserver *server,
 
 		size_t len = ioa_network_buffer_get_size(nbh);
 		if (stun_set_binding_response_str(ioa_network_buffer_data(nbh), &len, tid,
-					get_remote_addr_from_ioa_socket(ss->client_socket), 0, NULL, cookie, old_stun) >= 0) {
+					get_remote_addr_from_ioa_socket(ss->client_socket), 0, NULL, cookie, old_stun, *server->no_stun_backward_compatibility) >= 0) {
 
 			addr_cpy(response_origin, get_local_addr_from_ioa_socket(ss->client_socket));
 
@@ -4606,7 +4606,11 @@ static int read_client_connection(turn_turnserver *server,
 			return 0;
 		}
 
-	} else if (old_stun_is_command_message_str(ioa_network_buffer_data(in_buffer->nbh), ioa_network_buffer_get_size(in_buffer->nbh), &old_stun_cookie) && !(*(server->no_stun))) {
+	} else if (
+		old_stun_is_command_message_str(ioa_network_buffer_data(in_buffer->nbh), ioa_network_buffer_get_size(in_buffer->nbh), &old_stun_cookie) &&
+		!(*(server->no_stun)) &&
+		!(*(server->no_stun_backward_compatibility))
+	) {
 
 		ioa_network_buffer_handle nbh = ioa_network_buffer_allocate(server->e);
 		int resp_constructed = 0;
@@ -4932,7 +4936,8 @@ void init_turn_server(turn_turnserver* server,
 		const char* oauth_server_name,
 		const char* acme_redirect,
 		ALLOCATION_DEFAULT_ADDRESS_FAMILY allocation_default_address_family,
-		vintp log_binding) {
+		vintp log_binding,
+		vintp no_stun_backward_compatibility) {
 
 	if (!server)
 		return;
@@ -5006,6 +5011,8 @@ void init_turn_server(turn_turnserver* server,
 	set_ioa_timer(server->e, 1, 0, timer_timeout_handler, server, 1, "timer_timeout_handler");
 
 	server->log_binding = log_binding;
+
+	server->no_stun_backward_compatibility = no_stun_backward_compatibility;
 }
 
 ioa_engine_handle turn_server_get_engine(turn_turnserver *s) {
